# agent-data-protocol

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.it.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: adp-measure.sh  adp-notify.sh
.github/workflows/: ci.yml
benchmarks/: bench_comprehensive.py  bench_dynamic_lut.py  compare_formats.py  comprehensive_report.md  comprehensive_results.json  encoders.py  payloads.py  pricing.py  results.md  workloads.py
claude-plugin/: README.md  install.py  install.sh  uninstall.py  uninstall.sh
claude-plugin/.claude-plugin/: marketplace.json  plugin.json
claude-plugin/agents/: adp-agent.md
claude-plugin/commands/: adp-bench.md  adp-dashboard.md  adp-decode.md  adp-encode.md  adp-prompt.md  adp-serve.md  adp-sign.md  adp-to-html.md  adp-to-md.md  adp-verify.md
claude-plugin/hooks/: session-start.sh
claude-plugin/skills/adp/: SKILL.md
docs/: ADP-relazione-completa.md  benchmarks.md  claude-code.md  dynamic-lut.md  images.md  integrity.md  live-viewer.md
docs/superpowers/plans/: 2026-05-22-readme-batch.md  2026-05-24-comprehensive-benchmark.md  2026-05-24-dynamic-lut-capability-negotiation.md  2026-05-24-dynamic-lut-core.md  2026-05-24-dynamic-lut-diff-encoding.md  2026-05-24-dynamic-lut-tokenizer-cost.md  2026-05-24-dynamic-lut-tpd-promotion.md  2026-05-24-dynamic-lut-warmup.md  2026-05-25-dashboard.md
docs/superpowers/specs/: 2026-05-22-adp-design.md  2026-05-22-gla-design.md  2026-05-22-readme-batch-design.md  2026-05-24-dynamic-lut-design.md
examples/: quickstart.py  two_agents_db.py
scripts/: screenshot_live_viewer.py
src/adp/: __init__.py  cli.py  converters.py  cost.py  dashboard.py  db.py  diff.py  image.py  integrity.py  lut.py  parser.py  prompt.py  serializer.py  serve.py  session.py  tpd.py
src/gla/: __init__.py  cli.py  converters.py  parser.py  prompt.py  serializer.py
tests/: test_caps.py  test_converters.py  test_cost.py  test_dashboard.py  test_diff.py  test_image.py  test_integrity.py  test_lut.py  test_roundtrip.py  test_session.py  test_tpd_db.py  test_tpd_promotion.py  test_v02_features.py  test_warmup.py
tests/fixtures/: example.json
