[project]
name = "gla"
version = "0.1.0"
description = "Goal Language Agents — token-efficient lossless serialization format for AI agent communication"
authors = [{name = "Adriano Dal Pastro", email = "adrianodalpastro@tielogic.com"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
keywords = ["llm", "agents", "serialization", "tokens", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "tiktoken>=0.7",
]
bench = [
    "msgpack>=1.1.2",
    "pyyaml>=6.0.3",
    "tomli-w>=1.2.0",
]

[project.scripts]
gla = "gla.cli:main"

[project.urls]
Homepage = "https://github.com/adrianodalpastro/GoalLanguageAgents"
Repository = "https://github.com/adrianodalpastro/GoalLanguageAgents"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gla"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
