[project]
name = "adp"
version = "0.3.5"
description = "ADP — Agent Data Protocol. Token-efficient lossless serialization for AI agent communication"
authors = [{name = "Adriano Dal Pastro", email = "adrianodalpastro@tielogic.com"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
keywords = ["llm", "agents", "serialization", "tokens", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "tiktoken>=0.7",
]
bench = [
    "imagehash>=4.3.2",
    "msgpack>=1.1.2",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "tomli-w>=1.2.0",
]
tokenizer = [
    "tiktoken>=0.7",
]

[project.scripts]
adp = "adp.cli:main"

[project.urls]
Homepage = "https://github.com/adrianodalpastro/agent-data-protocol"
Repository = "https://github.com/adrianodalpastro/agent-data-protocol"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
